--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ nav a:hover::after {
 }
 
 .tracks-whisper {
-  font-family: 'News';
+  font-family: 'Zai';
   opacity: 0.8;
   margin-bottom: 60px;
 }
